# appdata-tools

./: configure.ac
contrib/: appdata-tools.spec.in
data/: Makefile.am  appdata.xsd
docs/: index.html
